force-app/main/default/objects/Trade_Doc_Comments__c/Trade_Doc_Comments__c.object-meta.xml
<CustomObject>
    <description>For Legal Concerning the Trade Doc Comment ,</description>
    <label>Trade Doc Comment</label>
    <nameField>
        <displayFormat>TDC-{0000}</displayFormat>
        <label>Trade Doc Comments  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trade Doc Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>