force-app/main/default/objects/Trade_Doc_Comments__c/fields/Map_Name__c.field-meta.xml
<CustomField>
    <fullName>Map_Name__c</fullName>
    <formula>Supplier_Buyer_Map__r.Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Map Name</label>
    <type>Text</type>
</CustomField>