force-app/main/default/objects/Trade_Doc_Comments__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <formula>Sales_Opportunity__r.Supplier_Buyer_txt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Name</label>
    <type>Text</type>
</CustomField>