force-app/main/default/objects/Trade_Doc_Comments__c/fields/Sales_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Sales_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Opportunity</label>
    <referenceTo>Invoice_Opportunity__c</referenceTo>
    <relationshipLabel>Trade Doc Comments</relationshipLabel>
    <relationshipName>Trade_Doc_Comments</relationshipName>
    <type>Lookup</type>
</CustomField>