force-app/main/default/objects/Trade_Doc_Comments__c/fields/Supplier_Buyer_Map__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Buyer_Map__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Buyer Map</label>
    <referenceTo>Supplier_Buyer_Map__c</referenceTo>
    <relationshipLabel>Trade Doc Comments</relationshipLabel>
    <relationshipName>Trade_Doc_Comments</relationshipName>
    <type>Lookup</type>
</CustomField>