force-app/main/default/objects/Trade_Doc_Comments__c/fields/Trade_Doc_Comments__c.field-meta.xml
<CustomField>
    <fullName>Trade_Doc_Comments__c</fullName>
    <label>Trade Doc Comments</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>